# fun4all_eic_qa

./: EnergyEvalEtaCut.C  EnergyEvalEtaCutAll.csh  Interface.C  LoopEvalMultiF.C  LoopEvalMultiF.csh  LoopEvalMultiFCircularCut.C  LoopEvalMultiFCircularCut.csh  LoopEvalMultiFVerify.C  LoopEvalMultiFVerify.csh  LoopEvalMultiH.C  LoopEvalMultiH.csh  LoopEvalMultiHCircularCut.C  LoopEvalMultiHCircularCut.csh  LoopEvalMultiHVerify.C  LoopEvalMultiHVerify.csh  LoopEvalMultiPortableChi2.C  LoopEvalMultiPortableChi2.C~  LoopEvalPortableCircularCut.C  LoopEvalPortableCircularCut.C~  LoopEvalPortableCircularCut.csh  README.md  Readme.txt  Readme.txt~  hadd.C
macros/: Fun4All_G4_EICDetector.C  G4EICDetector_qa.root  G4Setup_EICDetector.C  G4_QA.C  G4_QA_EIC.C  LoopEval.C  README.md  RunEval.C  RunSampling.C  condor.job  myscript.csh
macros/calorimeter/: #QA_Draw_ALL.sh#  QA_Draw_ALL.sh  QA_Draw_CEMC_G4Hit.C  QA_Draw_CEMC_TowerCluster.C  QA_Draw_Calorimeter_Sum_Cluster.C  QA_Draw_Calorimeter_Sum_TrackProj.C  QA_Draw_Calorimeter_Sum_TrackProjEP.C  QA_Draw_HCALIN_G4Hit.C  QA_Draw_HCALIN_TowerCluster.C  QA_Draw_HCALOUT_G4Hit.C  QA_Draw_HCALOUT_TowerCluster.C  README.md
source/: EvalCluster.cc  EvalCluster.h  EvalClusterLinkDef.h  EvalHit.cc  EvalHit.h  EvalHitLinkDef.h  EvalRootTTree.cc  EvalRootTTree.h  EvalRootTTreeLinkDef.h  EvalRootTTreeReco.cc  EvalRootTTreeReco.h  EvalTower.cc  EvalTower.h  EvalTowerLinkDef.h  Makefile.am  QAExample.cc  QAExample.h  QAG4SimulationEicCalorimeter.cc  QAG4SimulationEicCalorimeter.h  QAG4SimulationEicCalorimeterSum.cc  QAG4SimulationEicCalorimeterSum.h  README.md  SamplingFractionReco.cc  SamplingFractionReco.h  configure.ac
